pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGBasic3_all_vpcs_explain_debug.txt
Explaining connectivity from crn:v1:staging:public:is:us-south:a/6527::vpc:a456 to 161.26.0.0/20 within test-vpc1-ky using "protocol: UDP src-ports: 10-100 dst-ports: 443"
Interpreted source: vsi1-ky[10.240.10.4]
Interpreted destination: 161.26.0.0/20 (external)
===========================================================================================================================================================================

Connections are allowed from vsi1-ky[10.240.10.4] to Public Internet 161.26.0.0/20 using "protocol: UDP src-ports: 10-100 dst-ports: 443"

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> subnet1-ky -> network ACL acl1-ky -> 
	PublicGateway public-gw-ky -> 
	Public Internet 161.26.0.0/20


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 2, direction: outbound,  conns: protocol: udp,  dstPorts: 1-65535, remote: 161.26.0.0/16, local: 0.0.0.0/0
		network ACL acl1-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
